tambah js buat button

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             </ul>
         </div>
         
-        <!-- Bagian ini akan menampilkan hasil BMI -->
+        <!-- hasil BMI -->
         <div id="bmi-result-summary" class="result-summary hidden">
             <hr class="divider">
             <p style="text-align: center;">
